--- a/pom.xml
+++ b/pom.xml
@@ -291,7 +291,7 @@
             </goals>
             <configuration>
               <workingDirectory>${project.build.directory}/checkout</workingDirectory>
-              <message>Update reference manual</message>
+              <message>Update site content</message>
             </configuration>
           </execution>
         </executions>
