Move scm release to separate profile

--- a/pom.xml
+++ b/pom.xml
@@ -256,48 +256,6 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-scm-plugin</artifactId>
-        <configuration>
-          <connectionUrl>scm:git:git@github.com:citrusframework/citrusframework.github.io.git</connectionUrl>
-          <developerConnectionUrl>scm:git:git@github.com:citrusframework/citrusframework.github.io.git</developerConnectionUrl>
-          <scmVersion>master</scmVersion>
-          <scmVersionType>branch</scmVersionType>
-        </configuration>
-        <executions>
-          <execution>
-            <id>site-clone</id>
-            <phase>initialize</phase>
-            <goals>
-              <goal>checkout</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>site-add</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>add</goal>
-            </goals>
-            <configuration>
-              <workingDirectory>${project.build.directory}/checkout</workingDirectory>
-              <includes>**/**</includes>
-            </configuration>
-          </execution>
-          <execution>
-            <id>site-push</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>checkin</goal>
-            </goals>
-            <configuration>
-              <workingDirectory>${project.build.directory}/checkout</workingDirectory>
-              <message>Update site content</message>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
       </plugin>
@@ -311,4 +269,55 @@
       </extension>
     </extensions>
   </build>
+
+  <profiles>
+    <profile>
+      <id>release-github</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-scm-plugin</artifactId>
+            <configuration>
+              <connectionUrl>scm:git:git@github.com:citrusframework/citrusframework.github.io.git</connectionUrl>
+              <developerConnectionUrl>scm:git:git@github.com:citrusframework/citrusframework.github.io.git</developerConnectionUrl>
+              <scmVersion>master</scmVersion>
+              <scmVersionType>branch</scmVersionType>
+            </configuration>
+            <executions>
+              <execution>
+                <id>site-clone</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>site-add</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>add</goal>
+                </goals>
+                <configuration>
+                  <workingDirectory>${project.build.directory}/checkout</workingDirectory>
+                  <includes>**/**</includes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>site-push</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>checkin</goal>
+                </goals>
+                <configuration>
+                  <workingDirectory>${project.build.directory}/checkout</workingDirectory>
+                  <message>Update site content</message>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
