--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <site.path/>
-    <site.url>https://citrusframework.github.io</site.url>
+    <site.url>https://citrusframework.org</site.url>
     <citrus.version>2.7.5</citrus.version>
   </properties>
 
