Fixed release tag vor v2.7.4

--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -71,7 +71,7 @@
 
 - version: 2.7.4
   date: 2018-03-12
-  tag: latest
+  tag: v2-7-4
   issues: https://github.com/christophd/citrus/issues/
   stories: https://github.com/christophd/citrus/issues/
   changes:
