Fixed download url

--- a/pom.xml
+++ b/pom.xml
@@ -85,8 +85,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <site.path/>
-    <site.url>https://citrusframework.org</site.url>
+    <context.path/>
+    <downlaod.url>https://labs.consol.de/citrus-release</downlaod.url>
     <citrus.version>2.7.5</citrus.version>
   </properties>
 
