--- a/pom.xml
+++ b/pom.xml
@@ -373,6 +373,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+        <configuration>
+          <escapeString>\</escapeString>
+        </configuration>
         <executions>
           <execution>
             <id>copy-citrus-core-config-schemas</id>
