--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -1,3 +1,14 @@
+- version: 3.0.0
+  date: 2021-07-21
+  tag: v3.0.0
+  issues: https://github.com/citrusframework/citrus/issues/
+  stories: https://github.com/citrusframework/citrus/issues/
+  changes:
+    - title: Refactor Citrus 3.x
+      type: Update
+      id: 0
+      author: christophd
+
 - version: 2.8.0
   date: 2019-01-28
   tag: v2.8.0
@@ -940,7 +951,7 @@
     id: 105
     type: Fix
     author: christophd
-    
+
 - version: 2.6
   date: 2016-06-27
   tag: v2-6
@@ -1771,7 +1782,7 @@
     id: 68
     type: Add
     author: christophd
-    
+
 - version: 1.2
   date: 2012-07-05
   tag: v1-2
