--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -1,3 +1,22 @@
+- version: 3.1.0
+  date: 2021-08-27
+  tag: v3.1.0
+  issues: https://github.com/citrusframework/citrus/issues/
+  stories: https://github.com/citrusframework/citrus/issues/
+  changes:
+    - title: Improved Apache Camel support
+      type: Update
+      author: christophd
+    - title: Fix Hamcrest dependency in validation module
+      type: Fix
+      author: christophd
+    - title: Bump jetty from 9.4.41.v20210516 to 9.4.43.v20210629
+      type: Update
+      author: christophd
+    - title: Bump sshd-core from 2.5.1 to 2.7.0
+      type: Update
+      author: christophd
+
 - version: 3.0.0
   date: 2021-07-21
   tag: v3.0.0
@@ -6,7 +25,42 @@
   changes:
     - title: Refactor Citrus 3.x
       type: Update
-      id: 0
+      author: christophd
+    - title: Update Cucumber to 6.10
+      type: Update
+      author: christophd
+    - title: Update Kafka to 2.8
+      type: Update
+      author: christophd
+    - title: Update Jetty to 9.4
+      type: Update
+      author: christophd
+    - title: Update JUnit to 5.7
+      type: Update
+      author: christophd
+    - title: Update TestNG to 7.1
+      type: Update
+      author: christophd
+    - title: Update Selenium to 3.141
+      type: Update
+      author: christophd
+    - title: Update Apache Camel to 3.9
+      type: Update
+      author: christophd
+    - title: Update Spring to 5.3
+      type: Update
+      author: christophd
+    - title: Update to Java 11
+      type: Update
+      author: christophd
+    - title: Improve Java DSL fluent API
+      type: Update
+      author: christophd
+    - title: Make Spring optional
+      type: Update
+      author: christophd
+    - title: Modularize Citrus
+      type: Update
       author: christophd
 
 - version: 2.8.0
