chore: Refactor documentation page structure

--- a/src/main/site/_data/docs.yml
+++ b/src/main/site/_data/docs.yml
@@ -1,10 +1,9 @@
 - title: Getting Started
   docs:
-  - home
-  - user-guide
+  - welcome
+  - documentation
   - setup-maven
   - setup-gradle
-  - setup-ant
   - features
   - download
 
