--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 
   <organization>
     <name>ConSol Software GmbH</name>
-    <url>http://www.consol.com/</url>
+    <url>https://consol.com/</url>
   </organization>
 
   <mailingLists>
@@ -106,7 +106,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <context.path/>
-    <citrus.version>3.1.0</citrus.version>
+    <citrus.version>3.1.1</citrus.version>
   </properties>
 
   <dependencyManagement>
