--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -1,3 +1,17 @@
+- version: 3.1.1
+  date: 2021-12-14
+  tag: v3.1.1
+  issues: https://github.com/citrusframework/citrus/issues/
+  stories: https://github.com/citrusframework/citrus/issues/
+  changes:
+    - title: Bump Log4j version to 2.16.0
+      type: update
+      author: christophd
+    - title: Mask sensitive data in logs
+      id: 796
+      type: add
+      author: christophd
+
 - version: 3.1.0
   date: 2021-08-27
   tag: v3.1.0
