--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -1,3 +1,25 @@
+- version: 3.1.2
+  date: 2022-01-12
+  tag: v3.1.2
+  issues: https://github.com/citrusframework/citrus/issues/
+  stories: https://github.com/citrusframework/citrus/issues/
+  changes:
+    - title: Bump Log4j version to 2.17.1
+      type: update
+      author: christophd
+    - title: Bump Spring Framework to 5.3.6
+      type: update
+      author: christophd
+    - title: Bump Apache Camel to 3.14.0
+      type: update
+      author: christophd
+    - title: Bump Cucumber to 6.11.0
+      type: update
+      author: christophd
+    - title: Bump dependency versions
+      type: update
+      author: christophd
+
 - version: 3.1.1
   date: 2021-12-14
   tag: v3.1.1
