--- a/src/main/site/_data/releases.yml
+++ b/src/main/site/_data/releases.yml
@@ -1,3 +1,47 @@
+- version: 3.2.0
+  date: 2022-03-04
+  tag: v3.2.0
+  issues: https://github.com/citrusframework/citrus/issues/
+  stories: https://github.com/citrusframework/citrus/issues/
+  changes:
+    - title: Bump xstream from 1.4.18 to 1.4.19
+      type: update
+      author: christophd
+    - title: Bump xercesImpl from 2.12.1 to 2.12.2
+      type: update
+      author: christophd
+    - title: Bump snakeyaml from 1.15 to 1.26 in /vintage/citrus-arquillian
+      type: update
+      author: christophd
+    - title: Fix platform specific test failures
+      id: 837
+      type: fix
+      author: tschlat
+    - title: HttpActionBuilder should provide constructor with endpoint
+      id: 832
+      type: update
+      author: tschlat
+    - title: readFile() function does not honor variables when called with base64 encoding
+      id: 831
+      type: fix
+      author: tschlat
+    - title: Schema validation of message on send
+      id: 822
+      type: add
+      author: tschlat
+    - title: Factory for TestCase/TestCaseMetaInfo
+      id: 818
+      type: add
+      author: tschlat
+    - title: Access indexed bean properties via TestContext
+      id: 820
+      type: add
+      author: tschlat
+    - title: jdk17 compatibility of org.citrusframework.citrus
+      id: 837
+      type: update
+      author: bbortt
+
 - version: 3.1.2
   date: 2022-01-12
   tag: v3.1.2
